fixed padding/margin to align sections

--- a/css/style.scss
+++ b/css/style.scss
@@ -8,24 +8,32 @@ $md-screen: 768px;
 $lg-screen: 1224px;
 
 $header-color: #47B475;
-$primary-green: #498467;
-$secondary-green: #A6D3A0;
+$primary-color: #498467;
+$secondary-color: #A6D3A0;
+$border-color: #ccc;
 
 
 body {
-	//background-color: $bg-color;
+	margin: 0;
 }
 
 header {
-	@include grid-row();
 	background-color: $header-color;
+	padding: 1rem 0;
 	
-	h1 {
-		@include grid-column(8);
-	}
-	
-	#from-container{
-		@include grid-column(4);
+	#top-bar {
+		@include grid-row();
+		
+		h1 {
+			@include grid-column(8);
+			font-size: 3rem;
+			color: white;
+			margin: 0;
+		}
+		
+		#from-container{
+			@include grid-column(4);
+		}
 	}
 }
 
@@ -34,20 +42,34 @@ header {
 	
 	ul {
 		@include grid-column(12);
-		border: 1px solid $primary-green;
+		border: 1px solid $border-color;
 		margin: 0;
 		list-style-type: none;
+		margin: 1rem 0;
+		padding: 1rem;
 	}
 }
 
-#user-input {
-	@include grid-row();
+#input-container{
 	background-color: $header-color;
+	padding: 2rem 0;
+	
+	#user-input {
+		@include grid-row();
+		
+		input {
+			@include grid-column(8);
+		}
+		
+		button {
+			@include grid-column(4);
+		}
+	}
 }
 
 button {
 	display: inline;
 	background-color: white;
 	padding: 1rem;
-	border: 1px solid black;
+	border: 1px solid $border-color;
 }
